compiler/testData/diagnostics/tests/SafeCallUnknownType.kt
import <!UNRESOLVED_REFERENCE!>com<!>.<!DEBUG_INFO_MISSING_UNRESOLVED!>unknown<!>

fun ff() {
    konst a = <!UNRESOLVED_REFERENCE!>unknown<!>()
    konst b = <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>a<!>?.<!DEBUG_INFO_MISSING_UNRESOLVED!>plus<!>(42)
}
